--- a/public/style.css
+++ b/public/style.css
@@ -355,6 +355,7 @@ template {
   padding: 0;
   box-sizing: border-box;
   position: relative;
+  overflow-wrap: anywhere;
 }
 
 /* Body fill entire page */
